@@ -126,7 +126,10 @@ Version 1.3
  - Pull Request #564 - Add Cooper Configs from Stevejbauer (Justin)
  - Pull Request #561 - Add Version String Method from Ikkemaniac (Justin)
  - Pull Request #562 - Fix Windows Build Event with wrong directory from douglasbeck (Justin)
-
+ - Pull Request #567 and Issue 566 - Add Fibaro FGS221 from Nechry and
+   DanielLast (Justin)
+ - Add NodOn ASP-3-1-00 Smart Plug
+ 
 Version 1.2 
  - Released on 15/10/14
 
